k8s/resume-job-matcher-apm-server-service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: elastic-apm-server
  namespace: resume-job-matcher
spec:
  type: ExternalName
  externalName: apm-server.elastic.svc.cluster.local
