k8s/resume-job-matcher-mssql-service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: resume-job-matcher-mssql
  namespace: resume-job-matcher
spec:
  type: ExternalName
  externalName: mssql-mssql-linux.mssql.svc.cluster.local
