k8s/resume-job-matcher-rabbitmq-service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: resume-job-matcher-rabbitmq
  namespace: resume-job-matcher
spec:
  type: ExternalName
  externalName: rabbitmq.rabbitmq.svc.cluster.local
