k8s/resume-job-matcher-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: resume-job-matcher-ingress
  namespace: resume-job-matcher
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: resume-job-matcher.steffbeckers.eu
      http:
        paths:
          - path: /
            backend:
              serviceName: resume-job-matcher-app
              servicePort: 80
          - path: /api
            backend:
              serviceName: resume-job-matcher-api
              servicePort: 80
          - path: /graphql
            backend:
              serviceName: resume-job-matcher-api
              servicePort: 80
          - path: /ui
            backend:
              serviceName: resume-job-matcher-api
              servicePort: 80
  tls:
    - hosts:
        - resume-job-matcher.steffbeckers.eu
      secretName: steffbeckers.eu-tls
